Use extended log target

--- a/frr.conf.j2
+++ b/frr.conf.j2
@@ -1,7 +1,7 @@
-log extended frreal
+log extended ext-frr
  destination syslog supports-rfc5424
  priority debugging
-
+!
 ipv6 forwarding
 !
 router ospf6
@@ -83,4 +83,3 @@ ip protocol bgp route-map SETSRC
 !
 line vty
 !
-log syslog debugging
